Fixes visibility clash in Hackney/Thames

--- a/ext/riverlea/core/css/components/_components.css
+++ b/ext/riverlea/core/css/components/_components.css
@@ -536,7 +536,8 @@ div.civicrm-community-messages a.civicrm-community-message-dismiss::before {
   background-color: var(--crm-primary-color);
   color: var(--crm-primary-text-color);
 }
-#bootstrap-theme .bg-primary a,
+#bootstrap-theme li.bg-primary > a,
+#bootstrap-theme .bg-primary > span > a:not(.btn),
 #bootstrap-theme .dropdown-menu .bg-primary .crm-i::before {
   color: var(--crm-primary-text-color);
 }
@@ -549,7 +550,8 @@ div.civicrm-community-messages a.civicrm-community-message-dismiss::before {
   background-color: var(--crm-secondary-color);
   color: var(--crm-secondary-text-color);
 }
-#bootstrap-theme .bg-secondary a,
+#bootstrap-theme li.bg-secondary > a,
+#bootstrap-theme .bg-secondary > span > a:not(.btn),
 #bootstrap-theme .dropdown-menu .bg-secondary .crm-i::before {
   color: var(--crm-secondary-text-color);
 }
@@ -562,7 +564,8 @@ div.civicrm-community-messages a.civicrm-community-message-dismiss::before {
   background-color: var(--crm-success-color);
   color: var(--crm-success-text-color);
 }
-#bootstrap-theme .bg-success a,
+#bootstrap-theme li.bg-success > a,
+#bootstrap-theme .bg-success > span > a:not(.btn),
 #bootstrap-theme .dropdown-menu .bg-success .crm-i::before  {
   color: var(--crm-success-text-color);
 }
@@ -576,7 +579,8 @@ div.civicrm-community-messages a.civicrm-community-message-dismiss::before {
   background-color: var(--crm-info-color);
   color: var(--crm-info-text-color);
 }
-#bootstrap-theme .bg-info a,
+#bootstrap-theme li.bg-info > a,
+#bootstrap-theme .bg-info > span > a:not(.btn),
 #bootstrap-theme .dropdown-menu .bg-info .crm-i::before {
   color: var(--crm-info-text-color);
 }
@@ -590,7 +594,8 @@ div.civicrm-community-messages a.civicrm-community-message-dismiss::before {
   background-color: var(--crm-warning-color);
   color: var(--crm-warning-text-color);
 }
-#bootstrap-theme .bg-warning a,
+#bootstrap-theme li.bg-warning > a,
+#bootstrap-theme .bg-warning > span > a:not(.btn),
 #bootstrap-theme .dropdown-menu .bg-warning .crm-i::before {
   color: var(--crm-warning-text-color);
 }
@@ -604,7 +609,8 @@ div.civicrm-community-messages a.civicrm-community-message-dismiss::before {
   background-color: var(--crm-danger-color);
   color: var(--crm-danger-text-color);
 }
-#bootstrap-theme .bg-danger a,
+#bootstrap-theme li.bg-danger > a,
+#bootstrap-theme .bg-danger > span > a:not(.btn),
 #bootstrap-theme .dropdown-menu .bg-danger .crm-i::before {
   color: var(--crm-danger-text-color);
 }
